# picopl8demo

./: CMakeLists.txt  picopl8.c  pio_utils.h  write_sm.pio
